# vision-ocr-detect

./: .env.example  .gitignore  DEV.md  README.md  USAGE.md  collab-log.md  config.example.json  continue-prompt.md  feature-bugs-followup-2-response.md  feature-bugs-followup-3-response.md  feature-bugs-followup-4-response.md  feature-bugs-followup-5-response.md  feature-bugs-followup-extra-2-response.md  feature-bugs-followup-extra-3-response.md  feature-bugs-followup-extra-4-response.md  feature-bugs-followup-extra-response.md  feature-bugs-followup-response.md  feature-bugs-response.md  feature-review.md  logging.json  pyproject.toml
docs/superpowers/plans/: 2026-06-26-api-documentation-hardening.md
docs/superpowers/specs/: 2026-06-26-api-documentation-hardening-design.md
fixtures/: Bug8-cross-model.md
fixtures/profiles/: interpark-layout-32b.json  interpark-layout-72b.json  interpark-layout.json
scripts/: eval_bug8_compare.py
src/vision_ocr_detect/: __init__.py  config.py  deps.py  main.py
src/vision_ocr_detect/api/: detect.py  models.py  profiles.py
src/vision_ocr_detect/models/: __init__.py  detect.py  image.py  models.py  profile.py
src/vision_ocr_detect/providers/: __init__.py  base.py  ollama.py  openrouter.py  registry.py
src/vision_ocr_detect/services/: __init__.py  image_processor.py  (+1 more)
tests/: __init__.py  conftest.py  test_config.py  test_detect_api.py  test_image_processor.py  test_models_api.py  test_openapi.py  test_openrouter_provider.py  test_profile_store.py  test_profiles_api.py  test_provider_smoke.py  test_request_middleware.py
